--- a/layout_1/style1.css
+++ b/layout_1/style1.css
@@ -29,7 +29,7 @@ body {
     width: 976px;
     height: 35px;
     float: left;
-    border: solid 2px magenta;
+    border: solid 2px purple;
     padding-bottom: 15px;
 }
 
@@ -40,7 +40,7 @@ body {
     width: 936px;
     float: left;
     text-align: justify;
-    border: solid 2px blue;
+    border: solid 2px navy;
 }
 
 #footer {
