Adding minor changes in CSS comments

--- a/layout_1/style1.css
+++ b/layout_1/style1.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Basic Layout 1 CSS
-Theme URI: 
-Description: 
+Theme URI: add your proyect's url  
+Description: add your proyect's description
 Version: 1.0
 Author: GOZ
 */
